# job-ops

./: .env.example  .gitignore  Dockerfile  biome.json  docker-compose.override.yml  docker-compose.yml  latest-prompt.txt  master-resume.json  package-lock.json  package.json
.github/workflows/: build-image.yml  ci.yml  docker-publish.yml  docs-version.yml
.logs/: test.log.txt
data.old/: jobs.db  jobs.db-shm  jobs.db-wal  jwt-secret  llm-logs.jsonl  llm-logs.md  master-resume.json  master-resume.json.backup
docs-site/: docusaurus.config.ts  versions.json
docs-site/versioned_sidebars/: version-0.1.24-sidebars.json
orchestrator/: convert.js  convert_resume.py  latest_resume.json  package-lock.json  package.json  test_resume.json  vite.config.ts
shared/src/: location-domain.ts  location-support.test.ts  location-support.ts  (+5 more)
tailoring-service/: .env.example  Dockerfile  README.md  pyproject.toml  view_logs.py
tailoring-service/logs/: requests_20260428_211610.jsonl  requests_20260428_224446.jsonl  requests_20260428_230438.jsonl  requests_20260429_115219.jsonl  requests_20260429_121445.jsonl  requests_20260429_122107.jsonl  requests_20260429_123144.jsonl  requests_20260429_124603.jsonl  requests_20260429_131610.jsonl  requests_20260429_131837.jsonl  requests_20260429_133150.jsonl  requests_20260429_133616.jsonl  requests_20260429_133949.jsonl
tailoring-service/src/: cache.py  compact.py  flows.py  llm_client.py  main.py  prompts.py  schemas.py  test_merge.py
tailoring-service/src/tailoring_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+75 files in other folders)
