[project]
name = "tailoring-service"
version = "0.1.0"
description = "Python-based LLM tailoring service for resume generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "instructor>=1.6.0",
    "prefect>=3.0.0",
    "pydantic>=2.9.0",
    "google-genai>=1.0.0",
    "jsonref>=1.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
